# kpiece-comparison

./: README.md
avprrt_denso/: AVPRRT.py  AVPRRT_varying_dof.py  Utils.py  test_6dof.py  test_realscene.py  test_varying_dof.py
avprrt_denso/data/: AVPRRT_2DOF.data  AVPRRT_3DOF.data  AVPRRT_4DOF.data  AVPRRT_5DOF.data  AVPRRT_6DOF.data  AVPRRT_NOROBOT_10DOF.data  AVPRRT_NOROBOT_11DOF.data  AVPRRT_NOROBOT_12DOF.data  AVPRRT_NOROBOT_2DOF.data  AVPRRT_NOROBOT_3DOF.data  AVPRRT_NOROBOT_4DOF.data  AVPRRT_NOROBOT_5DOF.data  AVPRRT_NOROBOT_6DOF.data  AVPRRT_NOROBOT_7DOF.data  AVPRRT_NOROBOT_8DOF.data  AVPRRT_NOROBOT_9DOF.data
avprrt_superbot/: AVPRRT.py  test_varying_dof.py
avprrt_superbot/data/: AVPRRT_2DOFs.data  AVPRRT_3DOFs.data
data/: processing.py
data/AVPRRT/: AVPRRT_10DOFs.data  AVPRRT_11DOFs.data  (+10 more)
kpiece_denso/: CMakeLists.txt  DensoBenchmark.cpp  DensoConfig.h  DensoControlSpace.cpp  DensoControlSpace.h  DensoDemo.cpp  DensoProjection.h  DensoSetup.cpp  DensoSetup.h  DensoStatePropagator.cpp  DensoStatePropagator.h  DensoStateSpace.cpp  DensoStateSpace.h  Makefile
kpiece_superbot/: CMakeLists.txt  SuperBotBenchmark_AllDOFs.cpp  SuperBotConfig.h  SuperBotControlSpace.cpp  SuperBotControlSpace.h  SuperBotProjection.h  SuperBotSetup.cpp  SuperBotSetup.h  SuperBotStatePropagator.cpp  SuperBotStatePropagator.h  SuperBotStateSpace.cpp  SuperBotStateSpace.h
src/: FrictionAndZMPConstraints.py  MyKPIECE1.py  MyKPIECE1_2.py  MyKPIECE1_3.py  env3.txt  env4.txt
test/: test_KPIECE_control_N.py  test_KPIECE_kinematic.py  test_MyKPIECE1_1.py  test_MyKPIECE1_2.py  test_MyKPIECE1_3.py  test_control_acceleration.py  test_control_velocity.py
xml/: env.xml  env2.xml  env3.xml  robot.dae  superbot.xml
(+23 files in other folders)
